# glitchhunter

./: .dockerignore  .encryption_key  .gitignore  .glitchignore  CHANGELOG.md  Dockerfile  Dockerfile.slim  Dockerfile.webui  MIGRATION.md  README.md  RELEASE.md  ROADMAP.md  config.aagard.yaml  config.yaml  docker-compose.aagard.yml  docker-compose.yml  history.db  pyproject.toml  requirements.txt  settings.db  test_recursion_fix.py  ui-snapshot.txt
.glitchhunter/benchmark/: benchmark_20260415_182223.json  benchmark_20260415_182306.json
docs/: API.md  ARCHITECTURE.md  CACHING_AND_INCREMENTAL.md  CONFIDENCE_SCORING.md  CONTRIBUTING.md  CPU_FALLBACK.md  DOCKER_DEPLOYMENT.md  DYNAMIC_ANALYSIS.md  ENSEMBLE_VOTING.md  ESCALATION_STRATEGY.md  EVIDENCE_CONTRACT.md  GETTING_STARTED.md  MCP_INTEGRATION.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE_3_4_IMPLEMENTATION.md  README.md  REGRESSION_PROOF_FIXING.md  SAFETY_GUARANTEES.md  STATE_MACHINE_STATUS.md  TURBOQUANT_FALLBACK.md  UI_UPGRADE.md  USER_GUIDE.md  V2_0_RELEASE_NOTES.md  WEBUI_AUDIT_PLAN.md  WORKFLOW_BOTH_STACKS.md  graphics-concept-v2.md  remote_llama_setup.md
examples/: remote_llama_demo.py  smart_fallback_demo.py
sandbox/: Dockerfile  docker-compose.yaml  test_runner.sh
scripts/: benchmark_v2.py  build_llama_cpp.sh  debug_webui.sh  demo_report_center.py  deploy_aagard.sh  docker_build.sh  docker_start.sh  docker_stop.sh  download_models.py  download_models.sh  generate_hero_graphics.py  generate_webui_graphics.py  generate_webui_graphics_v2.py  generate_webui_graphics_v2_robust.py  migrate_assets_v1_to_v2.py  run_auto.sh  run_stack_a.sh  run_stack_b.sh  run_tui.sh  setup_socratiCode.sh  start_run_a.sh  start_run_b.sh  start_webui.sh  test_coordinator_minimal.py  test_tui_features.py  validate_graphics.py
src/: __init__.py  main.py
src/agent/: __init__.py  analyzer.py  analyzer_agent.py  evidence_contract.py  evidence_gate.py  evidence_types.py  hypothesis_agent.py  llift_prioritizer.py  observer_agent.py  parallel_swarm.py  patch_generator.py  patch_loop.py  sandbox_executor.py  state.py  state_machine.py  swarm_coordinator.py  verifier.py
src/analysis/: __init__.py  cfg_builder.py  dfg_builder.py  graph_comparator.py
src/api/: __init__.py  routes.py  schemas.py  server.py
src/cache/: __init__.py  incremental_scanner.py  symbol_cache.py
src/core/: __init__.py  ai_logger.py  api_key_manager.py  config.py  exceptions.py  ignore.py  logging_config.py  reporting.py
src/ensemble/: __init__.py  confidence_calculator.py  model_router.py  voting_engine.py
src/escalation/: __init__.py  bug_decomposer.py  context_explosion.py  ensemble_coordinator.py  human_report_generator.py  pr_creator.py
src/fixing/: __init__.py  auto_refactor.py  coverage_checker.py  escalation_manager.py  patch_merger.py  post_apply_verifier.py  pre_apply_validator.py  regression_test_generator.py  report_generator.py  rule_learner.py  semantic_diff.py  types.py
src/hardware/: __init__.py  auto_detect.py  detector.py  profiles.py  smart_fallback.py  vram_manager.py
src/inference/: __init__.py  _llama_cpp_backend_legacy.py  engine.py  model_loader.py  openai_api.py
src/mapper/: __init__.py  parallel_parser.py  repo_mapper.py  repomix_wrapper.py  symbol_graph.py  tree_sitter_manager.py
src/mcp/: __init__.py  fallback_manager.py  socratiCode_client.py
src/mcp_gw/: __init__.py  fallback_manager.py
src/prediction/: __init__.py  engine.py  feature_extractor.py  glitch_model.py  model.py  prediction_engine.py  types.py
src/prefilter/: __init__.py  ast_analyzer.py  complexity.py  git_churn.py  language_registry.py  pipeline.py  semgrep_runner.py
src/problem/: __init__.py  (+12 more)
test_bugs/: vulnerable_code.py
test_ignore/: user_code.py
tests/: __init__.py  benchmarks_v3.py  conftest.py  test_config.py  test_ensemble.py  test_evidence_contract.py  test_evidence_gate.py  test_hardware_detector.py  test_mcp_client.py  test_parallel_parser.py  test_phase1.py  test_phase2_part1.py  test_phase3.py  test_phase4.py  test_pr_creator.py  test_prefilter.py  test_problem_api.py  test_problem_auto_fix.py  test_problem_classifier.py  test_problem_cli.py  test_problem_decomposition.py  test_problem_diagnosis.py  test_problem_models.py  test_problem_reports.py  test_problem_solution_path.py  test_problem_stack_adapter.py  test_problem_validation.py  test_rule_learner_vector.py  test_shield.py  test_symbol_graph_cache.py  test_tree_sitter.py  test_tui_problem.py  test_tui_problem_advanced.py  test_v3_components.py
(+152 files in other folders)
